@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -42,6 +42,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
+import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
@@ -64,7 +65,6 @@ import org.graalvm.nativeimage.impl.RuntimeClassInitializationSupport;
 
 import com.oracle.graal.pointsto.infrastructure.OriginalClassProvider;
 import com.oracle.graal.pointsto.meta.AnalysisUniverse;
-import com.oracle.graal.pointsto.util.GraalAccess;
 import com.oracle.svm.core.ParsingReason;
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.TypeResult;
@@ -72,9 +72,12 @@ import com.oracle.svm.core.annotate.Delete;
 import com.oracle.svm.core.hub.PredefinedClassesSupport;
 import com.oracle.svm.core.jdk.StackTraceUtils;
 import com.oracle.svm.core.option.HostedOptionKey;
+import com.oracle.svm.core.reflect.MissingReflectionRegistrationUtils;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.ExceptionSynthesizer;
+import com.oracle.svm.hosted.FallbackFeature;
 import com.oracle.svm.hosted.ImageClassLoader;
+import com.oracle.svm.hosted.ReachabilityRegistrationNode;
 import com.oracle.svm.hosted.classinitialization.ClassInitializationSupport;
 import com.oracle.svm.hosted.substitute.AnnotationSubstitutionProcessor;
 import com.oracle.svm.hosted.substitute.DeletedElementException;
@@ -119,19 +122,21 @@ public final class ReflectionPlugins {
     private final ClassInitializationPlugin classInitializationPlugin;
     private final AnalysisUniverse aUniverse;
     private final ParsingReason reason;
+    private final FallbackFeature fallbackFeature;
 
     private ReflectionPlugins(ImageClassLoader imageClassLoader, SnippetReflectionProvider snippetReflection, AnnotationSubstitutionProcessor annotationSubstitutions,
-                    ClassInitializationPlugin classInitializationPlugin, AnalysisUniverse aUniverse, ParsingReason reason) {
+                    ClassInitializationPlugin classInitializationPlugin, AnalysisUniverse aUniverse, ParsingReason reason, FallbackFeature fallbackFeature) {
         this.imageClassLoader = imageClassLoader;
         this.snippetReflection = snippetReflection;
         this.annotationSubstitutions = annotationSubstitutions;
         this.classInitializationPlugin = classInitializationPlugin;
         this.aUniverse = aUniverse;
         this.reason = reason;
+        this.fallbackFeature = fallbackFeature;
     }
 
     public static void registerInvocationPlugins(ImageClassLoader imageClassLoader, SnippetReflectionProvider snippetReflection, AnnotationSubstitutionProcessor annotationSubstitutions,
-                    ClassInitializationPlugin classInitializationPlugin, InvocationPlugins plugins, AnalysisUniverse aUniverse, ParsingReason reason) {
+                    ClassInitializationPlugin classInitializationPlugin, InvocationPlugins plugins, AnalysisUniverse aUniverse, ParsingReason reason, FallbackFeature fallbackFeature) {
         /*
          * Initialize the registry if we are during analysis. If hosted is false, i.e., we are
          * analyzing the static initializers, then we always intrinsify, so don't need a registry.
@@ -142,7 +147,7 @@ public final class ReflectionPlugins {
             }
         }
 
-        ReflectionPlugins rp = new ReflectionPlugins(imageClassLoader, snippetReflection, annotationSubstitutions, classInitializationPlugin, aUniverse, reason);
+        ReflectionPlugins rp = new ReflectionPlugins(imageClassLoader, snippetReflection, annotationSubstitutions, classInitializationPlugin, aUniverse, reason, fallbackFeature);
         rp.registerMethodHandlesPlugins(plugins);
         rp.registerClassPlugins(plugins);
     }
@@ -161,14 +166,18 @@ public final class ReflectionPlugins {
      * Adding an array type of a Java collection class to this list is always wrong, because those
      * are never immutable.
      */
-    private static final Set<Class<?>> ALLOWED_CONSTANT_CLASSES = new HashSet<>(Arrays.asList(
+    private static final Set<Class<?>> ALLOWED_CONSTANT_CLASSES = Set.of(
                     Class.class, String.class, ClassLoader.class,
                     Method.class, Constructor.class, Field.class,
                     MethodHandle.class, MethodHandles.Lookup.class, MethodType.class,
                     VarHandle.class,
-                    ByteOrder.class));
+                    ByteOrder.class);
 
     private void registerMethodHandlesPlugins(InvocationPlugins plugins) {
+        for (Class<?> clazz : List.of(Boolean.class, Byte.class, Short.class, Character.class, Integer.class, Long.class, Float.class, Double.class)) {
+            registerFoldInvocationPlugins(plugins, clazz, "toString", "toBinaryString", "toOctalString", "toHexString");
+        }
+        registerFoldInvocationPlugins(plugins, String.class, "valueOf");
 
         registerFoldInvocationPlugins(plugins, MethodHandles.class,
                         "publicLookup", "privateLookupIn",
@@ -214,7 +223,7 @@ public final class ReflectionPlugins {
             if (classArg instanceof Class<?>) {
                 if (shouldInitializeAtRuntime((Class<?>) classArg)) {
                     /* Skip the folding and register the field for run time reflection. */
-                    if (reason == ParsingReason.PointsToAnalysis) {
+                    if (reason.duringAnalysis()) {
                         Field field = ReflectionUtil.lookupField(true, (Class<?>) args[0], (String) args[1]);
                         if (field != null) {
                             RuntimeReflection.register(field);
@@ -237,7 +246,7 @@ public final class ReflectionPlugins {
                 Field field = (Field) fieldArg;
                 if (isStatic(field) && shouldInitializeAtRuntime(field.getDeclaringClass())) {
                     /* Skip the folding and register the field for run time reflection. */
-                    if (reason == ParsingReason.PointsToAnalysis) {
+                    if (reason.duringAnalysis()) {
                         RuntimeReflection.register(field);
                     }
                     return false;
@@ -251,6 +260,21 @@ public final class ReflectionPlugins {
         registerFoldInvocationPlugins(plugins, Class.class,
                         "getField", "getMethod", "getConstructor",
                         "getDeclaredField", "getDeclaredMethod", "getDeclaredConstructor");
+
+        if (MissingReflectionRegistrationUtils.throwMissingRegistrationErrors()) {
+            registerBulkInvocationPlugin(plugins, Class.class, "getClasses", RuntimeReflection::registerAllClasses);
+            registerBulkInvocationPlugin(plugins, Class.class, "getDeclaredClasses", RuntimeReflection::registerAllDeclaredClasses);
+            registerBulkInvocationPlugin(plugins, Class.class, "getConstructors", RuntimeReflection::registerAllConstructors);
+            registerBulkInvocationPlugin(plugins, Class.class, "getDeclaredConstructors", RuntimeReflection::registerAllDeclaredConstructors);
+            registerBulkInvocationPlugin(plugins, Class.class, "getFields", RuntimeReflection::registerAllFields);
+            registerBulkInvocationPlugin(plugins, Class.class, "getDeclaredFields", RuntimeReflection::registerAllDeclaredFields);
+            registerBulkInvocationPlugin(plugins, Class.class, "getMethods", RuntimeReflection::registerAllMethods);
+            registerBulkInvocationPlugin(plugins, Class.class, "getDeclaredMethods", RuntimeReflection::registerAllDeclaredMethods);
+            registerBulkInvocationPlugin(plugins, Class.class, "getNestMembers", RuntimeReflection::registerAllNestMembers);
+            registerBulkInvocationPlugin(plugins, Class.class, "getPermittedSubclasses", RuntimeReflection::registerAllPermittedSubclasses);
+            registerBulkInvocationPlugin(plugins, Class.class, "getRecordComponents", RuntimeReflection::registerAllRecordComponents);
+            registerBulkInvocationPlugin(plugins, Class.class, "getSigners", RuntimeReflection::registerAllSigners);
+        }
 
         Registration r = new Registration(plugins, Class.class);
         r.register(new RequiredInvocationPlugin("forName", String.class) {
@@ -299,7 +323,7 @@ public final class ReflectionPlugins {
              */
             return false;
         }
-        Class<?> callerClass = OriginalClassProvider.getJavaClass(snippetReflection, b.getMethod().getDeclaringClass());
+        Class<?> callerClass = OriginalClassProvider.getJavaClass(b.getMethod().getDeclaringClass());
         MethodHandles.Lookup lookup;
         try {
             /* The constructor of Lookup is not public, so we need to invoke it via reflection. */
@@ -362,7 +386,7 @@ public final class ReflectionPlugins {
         if (PredefinedClassesSupport.isPredefined(clazz)) {
             return false;
         }
-        return pushConstant(b, targetMethod, () -> clazz.getName(), JavaKind.Object, clazz.getClassLoader(), true) != null;
+        return pushConstant(b, targetMethod, clazz::getName, JavaKind.Object, clazz.getClassLoader(), true) != null;
     }
 
     /**
@@ -387,7 +411,7 @@ public final class ReflectionPlugins {
     }
 
     private void registerFoldInvocationPlugin(InvocationPlugins plugins, Method reflectionMethod, Predicate<Object[]> allowConstantFolding) {
-        if (!ALLOWED_CONSTANT_CLASSES.contains(reflectionMethod.getReturnType()) && !reflectionMethod.getReturnType().isPrimitive()) {
+        if (!isAllowedReturnType(reflectionMethod.getReturnType())) {
             throw VMError.shouldNotReachHere("Return type of method " + reflectionMethod + " is not on the allow-list for types that are immutable");
         }
         reflectionMethod.setAccessible(true);
@@ -404,6 +428,10 @@ public final class ReflectionPlugins {
                 return foldInvocationUsingReflection(b, targetMethod, reflectionMethod, receiver, args, allowConstantFolding);
             }
         });
+    }
+
+    private static boolean isAllowedReturnType(Class<?> returnType) {
+        return ALLOWED_CONSTANT_CLASSES.contains(returnType) || returnType.isPrimitive();
     }
 
     private boolean foldInvocationUsingReflection(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Method reflectionMethod, Receiver receiver, ValueNode[] args,
@@ -442,7 +470,7 @@ public final class ReflectionPlugins {
         }
 
         /* String representation of the parameters for debug printing. */
-        Supplier<String> targetParameters = () -> (receiverValue == null ? "" : receiverValue.toString() + "; ") +
+        Supplier<String> targetParameters = () -> (receiverValue == null ? "" : receiverValue + "; ") +
                         Stream.of(argValues).map(arg -> arg instanceof Object[] ? Arrays.toString((Object[]) arg) : Objects.toString(arg)).collect(Collectors.joining(", "));
 
         Object returnValue;
@@ -466,6 +494,48 @@ public final class ReflectionPlugins {
         return pushConstant(b, targetMethod, targetParameters, returnKind, returnValue, false) != null;
     }
 
+    private <T> void registerBulkInvocationPlugin(InvocationPlugins plugins, Class<T> declaringClass, String methodName, Consumer<T> registrationCallback) {
+        plugins.register(declaringClass, new RequiredInvocationPlugin(methodName, new Class<?>[]{Receiver.class}) {
+            @Override
+            public boolean isDecorator() {
+                return true;
+            }
+
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
+                VMError.guarantee(!targetMethod.isStatic(), "Bulk reflection queries are not static");
+                return registerConstantBulkReflectionQuery(b, receiver, registrationCallback);
+            }
+        });
+    }
+
+    @SuppressWarnings("unchecked")
+    private <T> boolean registerConstantBulkReflectionQuery(GraphBuilderContext b, Receiver receiver, Consumer<T> registrationCallback) {
+        /*
+         * Calling receiver.get(true) can add a null check guard, i.e., modifying the graph in the
+         * process. It is an error for invocation plugins that do not replace the call to modify the
+         * graph.
+         */
+        Object receiverValue = unbox(b, receiver.get(false), JavaKind.Object);
+        if (receiverValue == null || receiverValue == NULL_MARKER) {
+            return false;
+        }
+
+        b.add(new ReachabilityRegistrationNode(() -> registerForRuntimeReflection((T) receiverValue, registrationCallback)));
+        return true;
+    }
+
+    private <T> void registerForRuntimeReflection(T receiver, Consumer<T> registrationCallback) {
+        try {
+            registrationCallback.accept(receiver);
+            if (fallbackFeature != null) {
+                fallbackFeature.ignoreReflectionFallback = true;
+            }
+        } catch (LinkageError e) {
+            // Ignore, the call should be registered manually
+        }
+    }
+
     private static boolean shouldInitializeAtRuntime(Class<?> classArg) {
         ClassInitializationSupport classInitializationSupport = (ClassInitializationSupport) ImageSingletons.lookup(RuntimeClassInitializationSupport.class);
         return classInitializationSupport.shouldInitializeAtRuntime(classArg);
@@ -481,7 +551,7 @@ public final class ReflectionPlugins {
              * If the argument is not a constant, we try to extract a varargs-parameter list for
              * Class[] arrays. This is used in many reflective lookup methods.
              */
-            return SubstrateGraphBuilderPlugins.extractClassArray(annotationSubstitutions, snippetReflection, arg, true);
+            return SubstrateGraphBuilderPlugins.extractClassArray(b, annotationSubstitutions, snippetReflection, arg, true);
         }
 
         JavaConstant argConstant = arg.asJavaConstant();
@@ -508,7 +578,7 @@ public final class ReflectionPlugins {
             case Object:
                 return unboxObjectConstant(b, argConstant);
             default:
-                throw VMError.shouldNotReachHere();
+                throw VMError.shouldNotReachHereUnexpectedInput(argKind); // ExcludeFromJacocoGeneratedReport
         }
     }
 
@@ -521,7 +591,7 @@ public final class ReflectionPlugins {
              * reflective call will yield the original member, which will be intrinsified, and
              * subsequent phases are responsible for getting the right substitution.
              */
-            return OriginalClassProvider.getJavaClass(GraalAccess.getOriginalSnippetReflection(), javaType);
+            return OriginalClassProvider.getJavaClass(javaType);
         }
 
         /* Any other object that is not a Class. */
@@ -554,7 +624,7 @@ public final class ReflectionPlugins {
         if (context.bciCanBeDuplicated()) {
             return null;
         }
-        if (parseOnce || reason == ParsingReason.PointsToAnalysis) {
+        if (parseOnce || reason.duringAnalysis()) {
             if (isDeleted(element, context.getMetaAccess())) {
                 /*
                  * Should not intrinsify. Will fail during the reflective lookup at
@@ -597,10 +667,7 @@ public final class ReflectionPlugins {
          * If ReportUnsupportedElementsAtRuntime is set looking up a @Delete-ed element will return
          * a substitution method that has the @Delete annotation.
          */
-        if (annotated != null && annotated.isAnnotationPresent(Delete.class)) {
-            return true;
-        }
-        return false;
+        return annotated != null && annotated.isAnnotationPresent(Delete.class);
     }
 
     private JavaConstant pushConstant(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Supplier<String> targetParameters, JavaKind returnKind, Object returnValue,
